# bookmarks

./: .gitignore  .pylintrc  LICENCE  MANIFEST.in  README.md  requirements.txt  set_version.py
.github/workflows/: build-installer.yaml
bookmarks/: __init__.py  actions.py  application_launcher.py  asset_properties.py  bookmark_db.py  bookmark_properties.py  common.py  contextmenu.py  database.py  datacache.py  ffmpeg.py  images.py  importexport.py  log.py  main.py  notes.py  preferences.py  progress.py  publish.py  rv.py  session_lock.py  settings.py  shortcuts.py  slack.py  standalone.py  statusbar.py  templates.py  tokens.py  topbar.py  ui.py
bookmarks/asset_config/: asset_config.py  asset_config_widget.py
bookmarks/bookmark_editor/: __init__.py  bookmark_editor.py  bookmark_editor_widget.py  job_editor.py  server_editor.py
bookmarks/bookmarker/: __init__.py  bookmark_editor.py  job_editor.py  main.py  server_editor.py
bookmarks/common/: __init__.py  active.py  active_mode.py  clipboard.py  color.py  core.py  data.py  datacache.py  dcc.py  dist.py  env.py  filemonitor.py  filter.py  font.py  hash.py  initmode.py  lists.py  monitor.py  parser.py  seqshot.py  sequence.py  sequences.py  session_lock.py  sessionlock.py  sessionmode.py  settings.py  setup.py  signals.py  syncmode.py  tabs.py  test_active.py  test_core.py  test_data.py  test_dcc.py  test_env.py  test_filter.py  test_font.py  test_parser.py  test_seqshot.py  test_sequence.py  (+1 more)
bookmarks/config/: default_configs.py  editor.py  lib.py  status.py
bookmarks/database/: lib.py  test.py
bookmarks/editor/: __init__.py  addjobeditor.py  asset_properties.py  base.py  base_widgets.py  bookmark_properties.py  clipboard.py  jobs.py  jobs_widgets.py  preferences.py  tokeneditors.py
bookmarks/editors/: alembic_preview.py  description_editor.py  filter_editor.py  item_preview.py  thumb_capture.py  thumb_library.py  thumb_picker.py
bookmarks/file_saver/: __init__.py  file_saver.py  file_saver_widgets.py  main.py  widgets.py
bookmarks/items/: __init__.py  asset_items.py  assets.py  bookmark_items.py  bookmarks.py  delegate.py  favourite_items.py  favourites.py  file_items.py  files.py  models.py  switch.py  task_items.py  views.py
bookmarks/launcher/: __init__.py  gallery.py  launcher.py  launcher_gallery.py  main.py
bookmarks/links/: lib.py  model.py  view.py
bookmarks/lists/: __init__.py  alembic_preview.py  assets.py  base.py  basemodel.py  basewidget.py  bookmarks.py  delegate.py  favourites.py  files.py  image_viewer.py  item_preview.py  tasks.py  thumb_library.py
bookmarks/log/: __init__.py  lib.py  model.py  test.py  view.py
bookmarks/maya/: __init__.py  actions.py  base.py  capture.py  contextmenu.py  export.py  export_widget.py  hud.py  mCapture.py  main.py  plugin.py  shadertool.py  viewport.py  widget.py
bookmarks/properties/: application_properties_widget.py  asset_config.py  asset_config_widget.py  asset_properties_widget.py  base.py  base_widgets.py  bookmark_properties_widget.py  file_properties_widget.py  file_properties_widgets.py  preference_properties_widget.py  preference_properties_widgets.py
bookmarks/property_editor/: asset_editor.py  base.py  base_widgets.py  bookmark_editor.py  file_editor.py  file_editor_widgets.py  preference_editor.py
bookmarks/rsc/: config.json  icon.icns  stylesheet.qss
bookmarks/scripts/: aka_odyssey_sync.py  clips.py  render_layers_to_ae.py  scripts.json  send_images_to_after_effects.py  sg_sync.py  sync_asset_data.py
bookmarks/server/: activebookmarks.py  activebookmarks_presets.py  lib.py  model.py  preview.py  test.py  view.py
bookmarks/shotgun/: __init__.py  actions.py  link.py  link_asset.py  link_assets.py  link_bookmark.py  publish.py  publish_widgets.py  sg_publish_clip.py  shotgun.py  tasks.py
bookmarks/slack/: __init__.py  manifest.json  slack.py
bookmarks/studioaka/: __init__.py  (+5 more)
docs/: .buildinfo  CNAME  api.html  bookmarks.common.html  bookmarks.html  bookmarks.lists.basemodel.html  bookmarks.lists.basewidget.html  bookmarks.lists.delegate.html  bookmarks.lists.html  bookmarks.lists.items.html  bookmarks.main.html  genindex.html  guide.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  sitemap.xml
docs_source/: guide.rst  make.bat
installer/: installer.iss
launcher/: CMakeLists.txt
launcher/include/: config.h  config.h.in
launcher/python/: .pythonstartup  python.bat
launcher/src/: main.cxx  main.rc
oiioutil/: CMakeLists.txt
oiioutil/src/: oiioutil.cpp  test.py
package/: CMakeLists.txt  Dockerfile  README.md  build-imageutil.bat.in  build-package.bat.in  build-pyside.bat.in  build-win.ps1  build.bat  clean.bat
package/cmake/: config.cmake  port_versions.cmake
package/imageutil/: CMakeLists.txt
package/imageutil/include/: imageutil.h
package/imageutil/src/: pyimageutil.cpp
package/imageutil/test/: test_oiio_images.py.in
package/installer/: installer.iss.in
package/launcher/: CMakeLists.txt
package/launcher/include/: config.h.in
package/launcher/src/: bookmarks.cxx
package/scripts/: .pythonstartup.in  build-package.bat.in  build-pyside.bat.in  python.bat.in
package/vcpkg/CY2022/: vcpkg-configuration.json  vcpkg.json
package/vcpkg/CY2023/: vcpkg-configuration.json  vcpkg.json
package/vcpkg/CY2024/: vcpkg-configuration.json  vcpkg.json
package/vcpkg_ports/openimageio/: fix-openimageio_include_dir.patch  portfile.cmake  vcpkg.json
package/vcpkg_ports/python3/: portfile.cmake  vcpkg.json
package/vcpkg_ports/qt5-base/cmake/: qt_build_submodule.cmake  qt_download_submodule.cmake  qt_fix_makefile_install.cmake  qt_fix_prl.cmake  qt_port_hashes.cmake  qt_submodule_installation.cmake
src/: CMakeLists.txt
src/include/: commandlineparser.h  dist.h  env.h  imageutil.h  stringconverter.h
src/inno/: installer.iss
src/src/: .pythonstartup  app.cpp  env.cpp  imageutil.cpp  py-launcher.cpp  py.cpp  pyimageutil.cpp  python.cpp
src/test/: images.txt  test_oiio_images.py.in
tools/: README.md  version.py  win-build.ps1
(+1112 files in other folders)
